--- a/style.css
+++ b/style.css
@@ -592,6 +592,8 @@ h2:hover {
     padding-bottom: 50px;
 }
 
+/* made by monika */
+
 
 /* made by Radhika Verma */
 
@@ -846,6 +848,7 @@ h2:hover {
     width: 50rem;
 }
 .BTN1{
+    margin-top: 2rem;
     width: 10rem;
     height: 3rem;
     border: none;
