--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
     box-sizing: border-box;
     font-family: "BBC Reith Serif", Helvetica, Arial, sans-serif;
 }
-.culture{
+
+.culture {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -15,139 +16,167 @@
     border: 1px solid;
     height: 900px;
 }
-.in-culture-1{
+
+.in-culture-1 {
     display: flex;
     flex-direction: row;
 }
-.in-culture-2{
+
+.in-culture-2 {
     display: flex;
     flex-direction: row;
 }
-.star{
+
+.star {
     background-color: black;
     height: 550px;
 }
-.first{
-    width:82rem;
-    border:2px solid black;
+
+.first {
+    width: 82rem;
+    border: 2px solid black;
     margin-top: 2rem;
-    margin-left:17rem; 
+    margin-left: 17rem;
 }
-.photo{
+
+.photo {
     height: 200px;
     width: 300px;
 }
-.one{
+
+.one {
     margin-left: 17rem;
     margin-top: 1rem;
 }
-.two1{
+
+.two1 {
     font-size: 20px;
-    color:white
+    color: white
 }
-.two1:hover{
+
+.two1:hover {
     text-decoration: underline;
     color: white;
 
 }
-.two{
-    margin-top: 2rem;   
+
+.two {
+    margin-top: 2rem;
 }
-.two3{
+
+.two3 {
     margin-top: 1rem;
 }
-.go1{
+
+.go1 {
     font-size: 20px;
     border-right: 1px solid grey;
     color: white;
 }
-.star{
+
+.star {
     display: flex;
     justify-content: center;
     gap: 20px;
 }
-.two5{
+
+.two5 {
     margin-top: 30px;
 }
-.first1{
-    width:82rem;
-    border:1px solid black;
+
+.first1 {
+    width: 82rem;
+    border: 1px solid black;
     margin-top: 2rem;
-    margin-left:17rem; 
+    margin-left: 17rem;
 }
-.second{
+
+.second {
     margin-top: 1rem;
     font-size: 13px;
 }
-.photo1{
+
+.photo1 {
     margin-top: 2rem;
     height: 400px;
     width: 600px;
 }
-.nam{
+
+.nam {
     margin-top: 1rem;
 }
-.nam:hover{
+
+.nam:hover {
     text-decoration: underline;
 }
-.num{
+
+.num {
     margin-top: 1rem;
     font-size: 20px;
     width: 600px;
 }
-.second1{
+
+.second1 {
     display: flex;
     margin-left: 300px;
     gap: 50px;
-    
+
 }
-.photo2{
+
+.photo2 {
     margin-top: 5rem;
     height: 400px;
     width: 600px;
 }
-.num3{
+
+.num3 {
     margin-top: 2rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 2px solid  black;
+    border: 2px solid black;
     height: 200px;
     width: 100vw;
     background-color: rgb(242, 247, 245);
 
 }
-.first10{
-    width:82rem;
-    border:1px solid black;
+
+.first10 {
+    width: 82rem;
+    border: 1px solid black;
     margin-top: 2rem;
-    margin-left:17rem;
+    margin-left: 17rem;
 }
-.num7{
+
+.num7 {
     border: 1px solid;
 }
-.num5{
+
+.num5 {
     margin-top: 2rem;
     border: 1px solid;
 }
 
-.the0{
+.the0 {
     margin-left: 300px;
     margin-top: 20px;
 }
-.the1:hover{
+
+.the1:hover {
     text-decoration: underline;
 }
-.go{
+
+.go {
     border-right: 1.5px solid;
 }
-.the1{
+
+.the1 {
     display: flex;
     /* justify-content: center; */
     gap: 30px;
     margin-left: 310px;
     margin-top: 50px;
-=======
+}
 
 .head {
     display: flex;
@@ -511,7 +540,7 @@ h2:hover {
 
 .watch_sec {
     display: flex;
-    justify-content:space-between;
+    justify-content: space-between;
     gap: 20px;
     margin-left: 40px;
 }
@@ -592,6 +621,185 @@ h2:hover {
     padding-bottom: 50px;
 }
 
+/* made by monika */
+
+.business-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.business-headding h2 {
+    margin-top: 1rem;
+}
+
+.business-image img {
+    width: 50rem;
+}
+
+.business-container {
+    margin-top: 2rem;
+}
+
+.business-text {
+    display: flex;
+    flex-direction: column;
+    margin-left: 2rem;
+    margin-top: 4rem;
+}
+
+.business-button {
+    margin-top: 2rem;
+}
+
+.business-btn {
+    height: 3rem;
+    width: 7rem;
+    background-color: transparent;
+    color: rgb(0, 0, 0);
+    border: 2px solid rgb(0, 0, 0);
+    outline: none;
+    /* Removed outline-color */
+    font-size: 20px;
+    cursor: pointer
+}
+
+.business-btn:hover {
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    /* border: 2px solid rgb(255, 255, 255); */
+}
+
+.business-news {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    margin-top: 2rem;
+    gap: 10px;
+}
+
+.business-time {
+    display: flex;
+    margin-top: 1rem;
+    gap: 5px;
+}
+
+.business-time p {
+    font-size: 10px;
+}
+
+.business-content h3:hover {
+    text-decoration: underline;
+}
+
+/* Culture boxt style */
+.Culture-headding {
+    margin-top: 1rem;
+}
+
+.Culture {
+    margin-top: 3rem;
+}
+
+.Culture-text {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.Culture-headding1 {
+    display: flex;
+    flex-direction: column;
+    width: 28rem;
+    margin-top: 5rem;
+    gap: 10px;
+}
+
+.Culture-image img {
+    width: 50rem;
+}
+
+.Culture-btn {
+    height: 3rem;
+    width: 7rem;
+    background-color: transparent;
+    color: rgb(0, 0, 0);
+    border: 2px solid rgb(0, 0, 0);
+    outline: none;
+    /* Removed outline-color */
+    font-size: 20px;
+    cursor: pointer;
+    margin-top: 2rem;
+}
+
+.Culture-btn:hover {
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+}
+
+.Culture-content {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    margin-top: 2rem;
+    gap: 10px;
+}
+
+.Culture-news {
+    display: flex;
+    flex-direction: column;
+
+}
+
+.Culture-time {
+    display: flex;
+    gap: 10px;
+    margin-top: 10px;
+}
+
+.Culture-new h3:hover {
+    text-decoration: underline;
+}
+
+.hover:hover {
+    text-decoration: underline;
+}
+
+/* Editor's picks */
+
+.Editor-headding,
+.Editor-picks {
+    margin-top: 2rem;
+}
+
+.Editor-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    /* border: 2px solid black; */
+}
+
+.Editor-container-box {
+    display: flex;
+    flex-direction: column;
+    margin-top: 2rem;
+}
+
+.Editor-container-box img {
+    width: 26rem;
+    height: 15rem;
+}
+
+.Editor-container-box-text {
+    width: 25rem;
+}
+
+.Editor-time {
+    display: flex;
+    gap: 10px;
+    margin-top: 10px;
+}
+
+.Editor-container-headding p {
+    margin-top: 10px;
+}
+
 
 /* made by Radhika Verma */
 
@@ -600,7 +808,12 @@ h2:hover {
     margin: auto;
     height: 100%;
     width: 70%;
-    margin-top: 5rem; /* Added margin-top to push content down */
+    margin-top: 5rem;
+    /* Added margin-top to push content down */
+}
+
+.innovation-headding {
+    margin-top: 2rem;
 }
 
 /* Container for innovation content */
@@ -612,12 +825,14 @@ h2:hover {
 
 /* Adjust image width */
 .innovation-containt-image img {
-    width: 100%; /* Adjusted image width */
+    width: 100%;
+    /* Adjusted image width */
 }
 
 /* Heading width */
 .innovation-containt-heading {
-    width: 100%; /* Adjusted heading width */
+    width: 100%;
+    /* Adjusted heading width */
 }
 
 /* Adjust innovation text margin */
@@ -651,9 +866,11 @@ h2:hover {
     background-color: transparent;
     color: rgb(0, 0, 0);
     border: 2px solid rgb(0, 0, 0);
-    outline: none; /* Removed outline-color */
+    outline: none;
+    /* Removed outline-color */
     font-size: 20px;
-    cursor: pointer; /* Added cursor pointer */
+    cursor: pointer;
+    /* Added cursor pointer */
 }
 
 /* Hover effect for button */
@@ -668,23 +885,28 @@ h2:hover {
     grid-template-columns: repeat(5, 1fr);
 }
 
-.innvation-news-box{
+.innvation-news-box {
     display: grid;
 }
-.innovation-news-content{
+
+.innovation-news-content {
     display: flex;
     gap: 10px;
     margin-top: 1rem;
 }
+
 /* Flex container for news time */
 .innovation-news-time {
     display: flex;
     gap: 10px;
-    margin-top: 10px; /* Added margin-top */
+    margin-top: 10px;
+    /* Added margin-top */
 }
 
 /* Adjusted spacing for elements */
-.span1, .line, .b {
+.span1,
+.line,
+.b {
     margin-top: 10px;
 }
 
@@ -693,8 +915,18 @@ h2:hover {
     display: flex;
     gap: 10px;
 }
-.tech{
+
+.tech {
     margin-top: 10px;
+}
+
+.innvation-button {
+    margin-top: 2rem;
+}
+
+.business-para p,
+.innovation-text p {
+    margin-top: 1rem;
 }
 
 /* home Science and health section */
@@ -706,12 +938,13 @@ h2:hover {
     border-top: 2px solid rgb(58, 60, 62);
 }
 
-.Science-health-news{
+.Science-health-news {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 15px;
 }
-.Science-health-news1 img{
+
+.Science-health-news1 img {
     width: 40rem;
 }
 
@@ -794,26 +1027,29 @@ h2:hover {
     align-items: center;
     gap: 10px;
 }
-.image-text1, .image-time1{
+
+.image-text1,
+.image-time1 {
     gap: 10px;
 }
 
 /* adds style */
-.adds{
+.adds {
     background-color: rgb(248, 248, 248);
 }
 
-.adds-box{
+.adds-box {
     display: flex;
     gap: 10px;
     justify-content: center;
-    
+
 }
-.aad{
+
+.aad {
     margin-top: 2rem;
 }
 
-.adds hr{
+.adds hr {
     margin: 0;
     border: none;
     margin-top: 2rem;
@@ -821,36 +1057,52 @@ h2:hover {
 }
 
 /* sports section style  */
-.sport{
+.sport {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
 }
-.sport hr{
+
+.sport hr {
     margin: 0;
     border: none;
     margin-top: 2rem;
     border-top: 2px solid rgb(58, 60, 62);
 }
-.soprt-text{
+
+.soprt-text {
     width: 30rem;
     margin-top: 5rem;
 }
-.sport-news-content{
+
+.sport-news-content {
     display: flex;
 }
-.sport-image img{
+
+.sport-image img {
     width: 50rem;
 }
-.BTN1{
+
+.BTN1 {
     width: 10rem;
     height: 3rem;
     border: none;
     font-size: 18px;
 }
-.BTN1:hover{
+
+.BTN1:hover {
     background-color: black;
     color: white;
 }
-h2:hover{
+
+h2:hover {
     text-decoration: underline;
+}
+
+.sport-headding h2 {
+    margin-top: 2rem;
+}
+
+.soprt-text p,
+.BTN {
+    margin-top: 1rem;
 }
