--- a/travel/style.css
+++ b/travel/style.css
@@ -9,9 +9,7 @@ body{
     font-family: "BBC Reith Sans", Helvetica, Arial, sans-serif;
 }
 
-
 /* navbar style */
-
 
 .head{
     display: flex;
@@ -20,75 +18,75 @@ body{
     align-items: center;
     padding: 1rem;
     border-bottom: 1px solid rgb(230, 232, 234);
-  }
-  .bbc-logo img{
+}
+.bbc-logo img{
     margin-top: 8px;
     /* height: 35px; */
     width: 100px
-  }
-  .search-menu{
+}
+.search-menu{
     display: flex;
     gap: 40px;
     justify-content: start;
     font-size: 20px;
     margin-left: 20px;
-  }
-  .button{
+}
+.button{
     display: flex;
     gap: 20px;
     margin-right: 30px;
-  }
-  .button button{
-    font-weight: 500;
-    font-size: 16px;
-    text-decoration: none;
-    border: none;
-    padding: 10px;
-  }
-  .btn1{
-    background-color: rgb(0, 0, 0);
-    color: rgb(255, 255, 255);
-  }
-  .button button:hover{
-    background-color: rgb(58, 60, 62);
-    color: rgb(255, 255, 255);
-  }
-  .btn2{
-    background-color: transparent;
-    color: #000000;
-  }
-  .ul{
-    display: flex;
-    list-style: none;
-    justify-content: center;
-    font-family: "BBC Reith Sans", Helvetica, Arial, sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    border-bottom:1px solid rgb(230, 232, 234);
-  }
-  .home{
-    font-weight: 700;
-    border-bottom:2px solid #000000;
-    padding: 8px;
-  }
-  .home:hover{
-    border: none;
+}
+.button button{
+font-weight: 500;
+font-size: 16px;
+text-decoration: none;
+border: none;
+padding: 10px;
+}
+.btn1{
+background-color: rgb(0, 0, 0);
+color: rgb(255, 255, 255);
+}
+.button button:hover{
+background-color: rgb(58, 60, 62);
+color: rgb(255, 255, 255);
+}
+.btn2{
+background-color: transparent;
+color: #000000;
+}
+.ul{
+display: flex;
+list-style: none;
+justify-content: center;
+font-family: "BBC Reith Sans", Helvetica, Arial, sans-serif;
+font-weight: 500;
+font-size: 16px;
+border-bottom:1px solid rgb(230, 232, 234);
+}
+.home{
+font-weight: 700;
+border-bottom:2px solid #000000;
+padding: 8px;
+}
+.home:hover{
+border: none;
+background-color:rgb(230, 232, 234) ;
+}
+.video{
+border-left:1px solid rgb(230, 232, 234);
+padding-left: 8px;
+}
+li{
+padding: 8px;
+}
+.list:hover{
     background-color:rgb(230, 232, 234) ;
-  }
-  .video{
-    border-left:1px solid rgb(230, 232, 234);
-    padding-left: 8px;
-  }
-  li{
-    padding: 8px;
-  }
-  .list:hover{
-    background-color:rgb(230, 232, 234) ;
-  }
-  a{
+}
+a{
     text-decoration: none;
     color: #000000;
-  }
+}
 .fixed_nav{
     position: fixed;
     top: 0;
@@ -98,6 +96,26 @@ body{
     width: 100%;
 }
   
+/* second navbar */
+
+.second-nav{
+    /* margin-top: 100px; */
+    margin-left: 38rem;
+    gap: 50px;
+}
+
+.second-nav li{
+    list-style-type: none;
+}
+.second-nav li:hover{
+    text-decoration: underline;
+}
+
+.nav-list{
+    display: flex;
+}
+
+
 .main {
     margin: auto;
     height: 100%;
