--- a/travel/style.css
+++ b/travel/style.css
@@ -65,8 +65,8 @@ font-size: 16px;
 border-bottom:1px solid rgb(230, 232, 234);
 }
 .home{
-font-weight: 700;
-border-bottom:2px solid #000000;
+font-weight: 500;
+/* border-bottom:2px solid #000000; */
 padding: 8px;
 }
 .home:hover{
